--- a/M10515063/index.html
+++ b/M10515063/index.html
@@ -1,1 +1,39 @@
-"homework not found!!" 
+<!DOCTYPE html>
+<!-- Created by pdf2htmlEX (https://github.com/coolwanglu/pdf2htmlex) -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta charset="utf-8"/>
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+<link rel="stylesheet" href="base.min.css"/>
+<link rel="stylesheet" href="fancy.min.css"/>
+<link rel="stylesheet" href="main.css"/>
+<script src="compatibility.min.js"></script>
+<script src="theViewer.min.js"></script>
+<script>
+try{
+theViewer.defaultViewer = new theViewer.Viewer({});
+}catch(e){}
+</script>
+<title></title>
+</head>
+<body>
+<div id="sidebar">
+<div id="outline">
+</div>
+</div>
+<div id="page-container">
+<div id="pf1" class="pf w0 h0" data-page-no="1"><div class="pc pc1 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg1.png"/><div class="t m0 x1 h1 y1 ff1 fs0 fc0 sc0 ls0 ws0">幫牠找個家</div><div class="t m0 x2 h2 y2 ff1 fs1 fc1 sc0 ls0 ws0">林得恩 <span class="ff2">M10515009</span></div><div class="t m0 x2 h2 y3 ff1 fs1 fc1 sc0 ls0 ws0">陳曉毅 <span class="ff2">M10515063</span></div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf2" class="pf w0 h0" data-page-no="2"><div class="pc pc2 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg2.png"/><div class="t m0 x3 h3 y4 ff1 fs2 fc0 sc0 ls0 ws0">流浪動物認領養平台</div><div class="t m0 x3 h4 y5 ff3 fs3 fc0 sc0 ls0 ws0"><span class="_ _0"> </span><span class="ff2 fs4 fc2">2017<span class="ff1">年</span>2<span class="ff1">月台灣「流浪動物零安樂死」政策正式上路，表面</span></span></div><div class="t m0 x4 h4 y6 ff1 fs4 fc2 sc0 ls0 ws0">上流浪動物躲過了安樂死的命運，但實際上這些動物在超收</div><div class="t m0 x4 h4 y7 ff1 fs4 fc2 sc0 ls0 ws0">的收容所，住在壅擠的籠舍讓牠們的健康每況愈下。因此如</div><div class="t m0 x4 h4 y8 ff1 fs4 fc2 sc0 ls0 ws0">何讓這些動物可以快速的被認養正是我們平台要做的事。</div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf3" class="pf w0 h0" data-page-no="3"><div class="pc pc3 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg3.png"/><div class="t m0 x3 h3 y4 ff1 fs2 fc0 sc0 ls0 ws0">服務功能</div><div class="t m0 x3 h2 y9 ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">以地圖顯示台灣縣市流浪動物數量</span></div><div class="t m0 x3 h2 ya ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">及時定位顯示附近的收容所</span></div><div class="t m0 x3 h2 yb ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">查詢附近合格動物商家及動物醫院</span></div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf4" class="pf w0 h0" data-page-no="4"><div class="pc pc4 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg4.png"/><div class="t m0 x3 h3 y4 ff1 fs2 fc0 sc0 ls0 ws0">評審問題</div><div class="t m0 x3 h4 y5 ff3 fs3 fc0 sc0 ls0 ws0"><span class="_ _2"> </span><span class="ff2 fs4 fc2">Q1:<span class="ff1">已有類似資訊平台</span></span></div><div class="t m0 x5 h5 yc ff3 fs6 fc0 sc0 ls0 ws0"><span class="_ _3"> </span><span class="ff1 fs7 fc2">目前類似的資訊平台共同的問題是使用率不高，其原因不外乎</span></div><div class="t m0 x6 h5 yd ff1 fs7 fc2 sc0 ls0 ws0">是操作不便利、流浪動物的資訊老舊鮮少更新。</div><div class="t m0 x3 h4 ye ff3 fs3 fc0 sc0 ls0 ws0"><span class="_ _0"> </span><span class="ff2 fs4 fc2">Q2:<span class="ff1">僅限登記在案的動物，充其量是資料管理介面，對廣大</span></span></div><div class="t m0 x4 h4 yf ff1 fs4 fc2 sc0 ls0 ws0">無資料的流浪動物仍無解</div><div class="t m0 x7 h5 y10 ff3 fs6 fc0 sc0 ls0 ws0"><span class="_ _4"> </span><span class="ff1 fs7 fc2">我們主要的目的是要提供完整的流浪動物認養資訊，讓牠們不</span></div><div class="t m0 x8 h5 y11 ff1 fs7 fc2 sc0 ls0 ws0">會因為不流通的資訊而在收容所過完一生。</div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf5" class="pf w0 h0" data-page-no="5"><div class="pc pc5 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg5.png"/><div class="t m0 x3 h4 y5 ff3 fs3 fc0 sc0 ls0 ws0"><span class="_ _0"> </span><span class="ff2 fs4 fc2">Q3:<span class="ff1">資料之應用深度仍可再加強</span></span></div><div class="t m0 x7 h5 y12 ff3 fs6 fc0 sc0 ls0 ws0"><span class="_ _3"> </span><span class="ff1 fs7 fc2">地圖化呈現資料，結合其他<span class="ff2">opendata</span>如登記合法的寵物用品店</span></div><div class="t m0 x9 h5 yd ff1 fs7 fc2 sc0 ls0 ws0">家、友善動物的公園和店家，豐富地圖化的資料。</div><div class="t m0 x3 h4 y13 ff3 fs3 fc0 sc0 ls0 ws0"><span class="_ _0"> </span><span class="ff2 fs4 fc2">Q4:<span class="ff1">同質性</span>APP<span class="ff1">相當多</span></span></div><div class="t m0 x7 h5 y14 ff3 fs6 fc0 sc0 ls0 ws0"><span class="_ _4"> </span><span class="ff1 fs7 fc2">同<span class="ff2">Q1</span>，目前上市的寵物認領養<span class="ff2">APP</span>都是由各縣市政府主導，具</span></div><div class="t m0 x8 h5 y15 ff1 fs7 fc2 sc0 ls0 ws0">有地域性，但流浪動物資訊更新很慢，導致使用率低落。</div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf6" class="pf w0 h0" data-page-no="6"><div class="pc pc6 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg6.png"/><div class="t m0 x3 h3 y4 ff1 fs2 fc0 sc0 ls0 ws0">作品進度</div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf7" class="pf w0 h0" data-page-no="7"><div class="pc pc7 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg7.png"/><div class="t m0 x3 h2 y16 ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">使用<span class="ff2">google map</span>地圖化呈現流浪動物資料</span></div></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+<div id="pf8" class="pf w0 h0" data-page-no="8"><div class="pc pc8 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="bg8.png"/><div class="t m0 x3 h3 y4 ff1 fs2 fc0 sc0 ls0 ws0">資料來源</div><div class="t m0 x3 h2 y9 ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">行政院農委會畜牧處</span></div><div class="t m0 x3 h2 y17 ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">資料集<span class="ff2">:</span>動物認領養</span></div><div class="t m0 x3 h6 y18 ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff2 fs1 fc3">http://data.coa.gov.tw/Service/OpenData/AnimalOpenData.aspx</span></div><div class="t m0 x3 h2 y19 ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">經濟部商業司</span></div><div class="t m0 x3 h2 y1a ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff1 fs1 fc2">資料集<span class="ff2">:</span><span class="fc4">寵物服務業</span></span></div><div class="t m0 x3 h6 y1b ff3 fs5 fc0 sc0 ls0 ws0"><span class="_ _1"> </span><span class="ff2 fs1">http://data.gcis.nat.gov.tw/od/file?oid=E2EEB1C5-4A1A-468C-A3D5-</span></div><div class="t m0 x4 h6 y1c ff2 fs1 fc0 sc0 ls0 ws0">3FC007A8E4DC</div><a class="l" href="http://data.coa.gov.tw/Service/OpenData/AnimalOpenData.aspx"><div class="d m1" style="border-style:none;position:absolute;left:87.533386px;bottom:281.608765px;width:59.625000px;height:20.900391px;background-color:rgba(255,255,255,0.000001);"></div></a><a class="l" href="http://data.coa.gov.tw/Service/OpenData/AnimalOpenData.aspx"><div class="d m1" style="border-style:none;position:absolute;left:147.158386px;bottom:281.608765px;width:473.932617px;height:20.900391px;background-color:rgba(255,255,255,0.000001);"></div></a></div><div class="pi" data-data='{"ctm":[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}'></div></div>
+</div>
+<div class="loading-indicator">
+
+</div>
+</body>
+</html>
