--- a/M10515009/index.html
+++ b/M10515009/index.html
@@ -5,10 +5,10 @@
    </head>
    <body>
      <div>
-      <h2>評委海選時期的問題</h2>
+      <h2>Answer questions in competition</h2>
       <img src="image/1.jpg">
 	  <img src="image/2.jpg"> 
-	  <h2>demo</h2>
+	  <h2>Demo</h2>
 	  <img src="image/3.jpg"> 
     </div>
    </body>
